--- a/src/client/app/home/toolbar.html
+++ b/src/client/app/home/toolbar.html
@@ -1,4 +1,4 @@
-<md-toolbar ng-show="showMainToolbar" flex class="md-primary animate-show md-whiteframe-z1" ng-click="clickNav()">
+<md-toolbar id="navMain" ng-show="showMainToolbar" flex class="md-primary animate-show md-whiteframe-z1" ng-click="clickNav()">
     <div class="md-toolbar-tools">
         <md-button ng-click="openSidenav()" class="md-icon-button" hide-gt-md aria-label="Menu">
             <md-icon>menu</md-icon>
