--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -1,20 +1,18 @@
-<md-content im-pull-to-refresh refresh-function="refreshFunction()" >
-    <md-list>
-        <md-list-item ng-repeat="device in devices" class="md-3-line" ng-click="showDetails('{{device.groupId}}','{{device._id}}')">
-            <div layout="row" flex style="padding-left:10px">
-                <md-icon layout="column" layout-align="start end" ng-style="{color: device.icon.color }" md-svg-icon="{{ device.icon.name }}" aria-label="{{ device.icon.name }}"></md-icon>
-                <div class="md-list-item-text md-padding">
-                    <h4>{{ device.device }}</h4>
-                    <div ng-switch="device.pc_name || '_undefined_'">
-                        <h3 ng-switch-when="_undefined_">{{ device.location }}</h3>
-                        <h3 ng-switch-default>{{ device.pc_name }}</h3>
-                    </div>
-                    <p>{{ device.ip_address }}</p>
+<md-list>
+    <md-list-item  ng-repeat="device in devices" class="md-3-line" ng-click="showDetails(device.groupId,device._id)">
+        <div layout="row" flex class="md-whiteframe-z2" style="padding-left:10px">
+            <md-icon layout="column" layout-align="start end" ng-style="{color: device.icon.color }" md-svg-icon="{{ device.icon.name }}" aria-label="{{ device.icon.name }}"></md-icon>
+            <div class="md-list-item-text md-padding">
+                <h4>{{ device.device }}</h4>
+                <div ng-switch="device.pc_name || '_undefined_'">
+                    <h3 ng-switch-when="_undefined_">{{ device.location }}</h3>
+                    <h3 ng-switch-default>{{ device.pc_name }}</h3>
                 </div>
+                <p>{{ device.ip_address }}</p>
             </div>
-        </md-list-item>
-    </md-list>
-</md-content>
+        </div>
+    </md-list-item>
+</md-list>
 <md-fab-speed-dial md-direction="up" class="md-fab-bottom-right md-fling">
     <md-fab-trigger>
         <md-button aria-label="Add..." class="md-fab md-primary md-hue-2">
