--- a/src/client/app/home/toolbar.html
+++ b/src/client/app/home/toolbar.html
@@ -9,18 +9,9 @@
             <md-icon>search
                 <md-icon>
         </md-button>
-        <md-menu>
-            <md-button aria-label="Open group interactions menu" class="md-icon-button" ng-click="$mdOpenMenu($event)">
-                <md-icon md-menu-origin>more_vert</md-icon>
-            </md-button>
-            <md-menu-content width="4">
-                <md-menu-item>
-                    <md-button class="md-button" ng-click="showGroupDetails($event)" aria-label="Group Info">
-                        <md-icon>folder</md-icon> Details
-                    </md-button>
-                </md-menu-item>
-            </md-menu-content>
-        </md-menu>
+        <md-button class="md-icon-button"  ng-click="showGroupDetails()">
+            <md-icon md-menu-origin>more_vert</md-icon>
+        </md-button>
     </div>
 </md-toolbar>
 
