--- a/src/client/app/home/toolbar.html
+++ b/src/client/app/home/toolbar.html
@@ -20,8 +20,10 @@
         <md-button ng-click="goBack()" class="md-icon-button" hide-gt-md aria-label="Back">
             <md-icon>arrow_back</md-icon>
         </md-button>
-        <h2>{{CurrentGroup.name}}</h2>
         <span flex></span>
+        <md-button ng-click="deleteDevice()" class="md-icon-button md-warn" aria-label="Delete Device">
+            <md-icon>delete</md-icon>
+        </md-button>
     </div>
 </md-toolbar>
 
