--- a/src/client/index.html
+++ b/src/client/index.html
@@ -49,6 +49,7 @@
         <script src="/bower_components/angular/angular.js"></script>
         <script src="/bower_components/angular-animate/angular-animate.js"></script>
         <script src="/bower_components/angular-aria/angular-aria.js"></script>
+        <script src="/bower_components/angular-messages/angular-messages.js"></script>
         <script src="/bower_components/angular-material/angular-material.js"></script>
         <script src="/bower_components/angular-resource/angular-resource.js"></script>
         <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
@@ -63,10 +64,10 @@
         <script src="/src/client/app/core/root.module.js"></script>
         <script src="/src/client/app/core/global.controller.js"></script>
         <script src="/src/client/app/core/list.service.js"></script>
-        <script src="/src/client/app/devices/addDevice.controller.js"></script>
-        <script src="/src/client/app/devices/device.controller.js"></script>
         <script src="/src/client/app/groups/addGroup.controller.js"></script>
         <script src="/src/client/app/groups/deleteGroup.controller.js"></script>
+        <script src="/src/client/app/devices/addDevice.controller.js"></script>
+        <script src="/src/client/app/devices/device.controller.js"></script>
         <script src="/src/client/app/home/home.controller.js"></script>
         <script src="/src/client/app/home/sidebar.controller.js"></script>
         <script src="/src/client/app/search/search.controller.js"></script>
