--- a/src/client/app/home/home.html
+++ b/src/client/app/home/home.html
@@ -13,7 +13,7 @@
         </div>
     </md-list-item>
 </md-list>
-<md-fab-speed-dial md-direction="up" class="md-fab-bottom-right md-fling">
+<md-fab-speed-dial ng-if="!searchModel.searchActive" md-direction="up" class="md-fab-bottom-right md-fling">
     <md-fab-trigger>
         <md-button aria-label="Add..." class="md-fab md-primary md-hue-2">
             <md-icon>add</md-icon>
