added settings dialog

--- a/src/client/app/home/sidebar.html
+++ b/src/client/app/home/sidebar.html
@@ -12,7 +12,7 @@
                     <p>{{group.name}}</p>
                 </md-list-item>
                 <md-divider></md-divider>
-                <md-list-item ng-click="showSettings()">
+                <md-list-item ng-click="navigateTo('settings', '')">
                     <md-item-content md-ink-ripple layout="row" layout-align="start center">
                         <div class="inset">
                             <md-icon class="md-dark">settings</md-icon>
