--- a/src/client/app/home/toolbar.html
+++ b/src/client/app/home/toolbar.html
@@ -44,6 +44,7 @@
         <md-button ng-click="goBack()" class="md-icon-button" hide-gt-md aria-label="Back">
             <md-icon>arrow_back</md-icon>
         </md-button>
+        <h2>{{Title}}</h2>
         <span flex></span>
     </div>
 </md-toolbar>
