--- a/src/client/app/devices/add-device-dialog.html
+++ b/src/client/app/devices/add-device-dialog.html
@@ -60,8 +60,13 @@
                     <input name="plc_firmware" ng-model="ctrl.device.firmware">
                 </md-input-container>
             </div>
+            <div layout="row" class="input-row">
+                <md-input-container flex>
+                    <label>Notes</label>
+                    <input name="notes" ng-model="ctrl.device.notes">
+                </md-input-container>
+            </div>
         </form>
-
     </md-dialog-content>
 
     <div class="md-actions">
