--- a/src/client/app/devices/device-details.html
+++ b/src/client/app/devices/device-details.html
@@ -56,6 +56,12 @@
                 <input name="plc_firmware" ng-model="ctrl.device.firmware">
             </md-input-container>
         </div>
+       <div layout="row" class="input-row">
+           <md-input-container flex>
+                <label>Notes</label>
+                <input name="notes" ng-model="ctrl.device.notes">
+            </md-input-container>
+        </div>
     </form>
 
     <div class="md-actions">
