--- a/cordova/platforms/android/assets/www/index.html
+++ b/cordova/platforms/android/assets/www/index.html
@@ -36,10 +36,25 @@
             <div ng-include="'app/home/toolbar.html'"></div>
             <div ng-if="searchModel.searchActive" class="search-overlay" ng-click="toggleSearch()"></div>
             <md-content id="contentMain" layout="column" flex ui-view layout-padding></md-content>
+            <md-fab-speed-dial ng-if="!searchModel.searchActive" md-open="false" md-direction="up" class="md-fab-bottom-right md-fling">
+                <md-fab-trigger>
+                    <md-button aria-label="Add..." class="md-fab md-primary md-hue-2">
+                        <md-icon>add</md-icon>
+                    </md-button>
+                </md-fab-trigger>
+                <md-fab-actions>
+                    <md-button class="md-fab md-raised md-mini md-primary md-hue-3" ng-click="addDevice($event)" aria-label="Add Device">
+                        <md-icon>computer</md-icon>
+                    </md-button>
+                    <md-button class="md-fab md-raised md-mini md-primary md-hue-3" ng-click="addGroup($event)" aria-label="Add Group">
+                        <md-icon>folder</md-icon>
+                    </md-button>
+                </md-fab-actions>
+            </md-fab-speed-dial>
         </div>
         
         <script src="js/lib-01e411b3ca.js"></script>
-        <script src="js/app-bdc320d970.js"></script>
+        <script src="js/app-0a9fd95745.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
     </body>
 </html>
